--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" type="text/css" media="screen and (min-width:780px)" href="./assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" media="screen and ()" href="./assets/css/reset.css">
 </head>
 <body>
     <header>
@@ -18,18 +18,19 @@
             <ul class="nav">
                 <li><a href="#">採用ご担当者の方</a></li>
                 <li><a href="#">ログイン</a></li>
+                <li><a href="#" class="btn">使ってみる</a></li>
             </ul>
         </div>
     </header>
     <main>
         <section class="top">
             <h1 class="title">キャリアを<br>カチトレ。</h1>
-            <p class="guideline">優良ベンチャーから大手企業まで多数！<br>たくさんの企業が「挑戦したい20代」を<br>待っています</p>
+            <p class="guideline">優良ベンチャーから大手企業まで多数!<br>たくさんの企業が「挑戦したい20代」を<br>待っています</p>
         <div class="button1">
-            <button type="button" class="btn">転職をお考えの方（無料登録）</button>
+            <a href="#" class="btn">転職をお考えの方（無料登録）</a>
         </div>
         <div class="button2">
-            <button type="button" class="btn1">採用ご担当者の方はこちら</button>
+            <a href="#" class="btn1">採用ご担当者の方はこちら</a>
         </div>
         </section>
 
@@ -51,7 +52,7 @@
           <div class="contents">
             <div class="text">
               <h4>マッチしたら<br><span class="under">企業と直接やり取り可能</span></h4>
-              <p>あなたの「興味がある」は企業に届きます。見事マッチすると企業からスカウトが届き、直接のやり取りが可能に。思わぬ企業からスカウトが届くことも！？</p>
+              <p>あなたの「興味がある」は企業に届きます。見事マッチすると企業からスカウトが届き、直接のやり取りが可能に。思わぬ企業からスカウトが届くことも!？</p>
             </div>
             <img src="./assets/img/meeting1.jpeg" alt="">
           </div>
@@ -62,9 +63,9 @@
             <p class="area">キャリトレはあなたの志向性を学習し、<br>おすすめの仕事をお届けします。<br>自分でも気付いていなかった新しい可能性に出会えます。</p>
         </section>
         <section>
-            <h6>楽しく、本気で、転職活動を始めよう。</h6>
+            <h6>楽しく、本気で、<br>転職活動を始めよう。</h6>
             <div class="button3">
-                <button type="button" class="btn">さっそく使ってみる</button>
+                <a href="#" class="btn">さっそく使ってみる</a>
             </div>
             <div class="tab"></div>
         </section>
